Fix ProvidesFile argument

--- a/source/fefu_base.dtx
+++ b/source/fefu_base.dtx
@@ -1,7 +1,7 @@
 % \iffalse meta-comment
 % !TEX program  = xeLaTeX
 %<*driver>
-\ProvidesFile{fefu_utils.dtx}
+\ProvidesFile{fefu_base.dtx}
 %</driver>
 %<package>\NeedsTeXFormat{LaTeX2e}
 %<package>\ProvidesPackage{fefu_base}
