Properly expand title in the task

--- a/source/fefu_style_imct.dtx
+++ b/source/fefu_style_imct.dtx
@@ -144,7 +144,7 @@
         \bigskip\bigskip
         \hbox to \textwidth{\uline{\@FEFUfaculty, группы \@FEFUgroup\hfill}}
         \par\bigskip\bigskip
-        \taskitem{\@title}
+        \expandafter\taskitem\expandafter{\@title}
         \taskitem{\@FEFUdeadline}
     }{\def\@FEFUnexttaskitemtitle{\def\@FEFUtaskitemtitle{Дата выдачи задания:}}
         \taskitem{\@FEFUtaskdate}
