Move page number to the right

--- a/source/fefu_style_default.dtx
+++ b/source/fefu_style_default.dtx
@@ -228,7 +228,7 @@
 %    \begin{macrocode}
 \urlstyle{same}
 %    \end{macrocode}
-% Sets page style: page number at the bottom right corner and no head rule.
+% Sets page style: page number at the bottom center corner and no head rule.
 %    \begin{macrocode}
 \fancypagestyle{plain}{\fancyhf{}\fancyfoot[C]{\thepage}}
 \renewcommand{\headrulewidth}{0pt}
