--- a/source/fefu_style_imct.dtx
+++ b/source/fefu_style_imct.dtx
@@ -245,6 +245,11 @@
 }
 %    \end{macrocode}
 % \end{macro}
+% Set page number style
+%    \begin{macrocode}
+\fancypagestyle{plain}{\fancyhf{}\fancyfoot[R]{\thepage}}
+\pagestyle{plain}
+%    \end{macrocode}
 % Set default values
 %    \begin{macrocode}
 \setdepartment{цифровой трансформации}
