Add school suffix

--- a/source/fefu_base.dtx
+++ b/source/fefu_base.dtx
@@ -51,6 +51,7 @@
 % The iternal variables are set up here.
 %    \begin{macrocode}
 \newcommand{\@FEFUschool}{цифровой экономики}
+\newcommand{\@FEFUschoolsuffix}{}
 \newcommand{\@FEFUgroup}{}
 \newcommand{\@FEFUsupervisor}{}
 \newcommand{\@FEFUsupervisortitle}{}
@@ -111,6 +112,7 @@
 % Sets respective internal variable
 %    \begin{macrocode}
 \newcommand{\setschool}[1]{\renewcommand{\@FEFUschool}{#1}}
+\newcommand{\setschoolsuffix}[1]{\renewcommand{\@FEFUschoolsuffix}{#1}}
 \newcommand{\setgroup}[1]{\renewcommand{\@FEFUgroup}{#1}}
 \newcommand{\setplace}[1]{\renewcommand{\@FEFUplace}{#1}}
 \newcommand{\setdepartment}[1]{\renewcommand{\@FEFUdepartment}{#1}}
