--- a/source/fefu_style_default.dtx
+++ b/source/fefu_style_default.dtx
@@ -51,7 +51,7 @@
     {\bf {«Дальневосточный федеральный университет»}}\\
     (ДВФУ)\\
     \bigskip
-    {\bfseries\setstretch{1.15}\MakeUppercase{\@FEFUschooltitle\ \@FEFUschool}\\}
+    {\bfseries\setstretch{1.15}\MakeUppercase{\@FEFUschooltitle\ \@FEFUschool}\@FEFUifempty{\@FEFUschoolsuffix}{}{\ \@FEFUschoolsuffix}\\}
 }
 \newcommand{\fefuheader}{%
     \setstretch{1}
