--- a/source/fefu_style_default.dtx
+++ b/source/fefu_style_default.dtx
@@ -62,6 +62,14 @@
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
+% \begin{macro}{\@FEFUfooter}
+% Inserts FEFU title page footer
+%    \begin{macrocode}
+\newcommand{\@FEFUfooter}{%
+    {\setstretch{1.15}\centering{Владивосток\\\the\year}\par}
+}
+%    \end{macrocode}
+% \end{macro}
 % Add thesis title.
 %    \begin{macrocode}
 \addtitle{thesis}{
