Use setmainlanguage instead of deprecated setdefaultlanguage

--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -128,7 +128,7 @@
 %    \begin{macrocode}
 \setmainfont{Times New Roman}
 
-\setdefaultlanguage{russian}
+\setmainlanguage{russian}
 \setotherlanguage{english}
 \PolyglossiaSetup{russian}{indentfirst=true}
 
