--- a/source/fefu_presentation.dtx
+++ b/source/fefu_presentation.dtx
@@ -81,7 +81,7 @@
 %    \end{macrocode}
 % Font and languages paramters are set up here.
 %    \begin{macrocode}
-\setdefaultlanguage{russian}
+\setmainlanguage{russian}
 \setotherlanguage{english}
 
 \if@FEFUnodefaultfont
