--- a/source/fefu_base.dtx
+++ b/source/fefu_base.dtx
@@ -286,24 +286,74 @@
 \newcommand*\@FEFUshortyear[1]{\expandafter\@gobbletwo\number\numexpr#1\relax}
 %    \end{macrocode}
 % \end{macro}
+% \begin{macro}{\fefu\_abbreviate}
+% Extracts the first argument and puts a dot after it
+%    \begin{macrocode}
+\ExplSyntaxOn
+\cs_new_protected:Npn \fefu_abbreviate:n #1
+{
+    \exp_args:Nx \str_head:n { #1 }.
+}
+\ExplSyntaxOff
+%    \end{macrocode}
+% \end{macro}
+% \begin{macro}{\fefu\_abbreviate\_seq}
+% Extracts an element from the sequence and abbreviates it
+%    \begin{macrocode}
+\ExplSyntaxOn
+\cs_new_protected:Npn \fefu_abbreviate_seq:Nn #1 #2
+{
+    \exp_args:Nx \fefu_abbreviate:n { \seq_item:Nn #1 { #2 } }
+}
+\ExplSyntaxOff
+%    \end{macrocode}
+% \end{macro}
 % \begin{macro}{\@FEFUshortname}
 % Prints short name.
 %    \begin{macrocode}
-\def\@FEFUshortnamehelper#1 #2 #3\relax{%
-    \StrLeft{#2}{1}[\@FEFU@name]\StrLeft{#3}{1}[\@FEFU@middlename]%
-    #1 \@FEFU@name. \@FEFU@middlename.%
+\ExplSyntaxOn
+\cs_new_protected:Npn \fefu_short_name_helper:n #1
+{
+    \tl_set:Nx \l_tmpa_tl { #1 }
+    \seq_set_split:NnV \l_tmpa_seq { ~ } \l_tmpa_tl
+    \int_case:nnF { \seq_count:N \l_tmpa_seq }
+    {
+        { 2 } { \seq_item:Nn \l_tmpa_seq { 1 } ~ \fefu_abbreviate_seq:Nn \l_tmpa_seq { 2 } }
+        { 3 } { \seq_item:Nn \l_tmpa_seq { 1 } ~ \fefu_abbreviate_seq:Nn \l_tmpa_seq { 2 } ~ \fefu_abbreviate_seq:Nn \l_tmpa_seq { 3 } }
+    }
+    {
+        #1
+    }
 }
-\def\@FEFUshortname#1{\@FEFUifempty{#1}{}{\expandafter\@FEFUshortnamehelper#1\relax}}
+
+\NewDocumentCommand{\@FEFUshortname}{m}{%
+    \fefu_short_name_helper:n { #1 }
+}
+\ExplSyntaxOff
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\@FEFUshortnamereversed}
 % Prints short name, surname last
 %    \begin{macrocode}
-\def\@FEFUshortnamereversedhelper#1 #2 #3\relax{%
-    \StrLeft{#2}{1}[\@FEFU@name]\StrLeft{#3}{1}[\@FEFU@middlename]%
-    \@FEFU@name. \@FEFU@middlename. #1%
+\ExplSyntaxOn
+\cs_new_protected:Npn \fefu_short_name_reversed_helper:n #1
+{
+    \tl_set:Nx \l_tmpa_tl { #1 }
+    \seq_set_split:NnV \l_tmpa_seq { ~ } \l_tmpa_tl
+    \int_case:nnF { \seq_count:N \l_tmpa_seq }
+    {
+        { 2 } { \fefu_abbreviate_seq:Nn \l_tmpa_seq { 2 } ~ \seq_item:Nn \l_tmpa_seq { 1 } }
+        { 3 } { \fefu_abbreviate_seq:Nn \l_tmpa_seq { 2 } ~ \fefu_abbreviate_seq:Nn \l_tmpa_seq { 3 } ~ \seq_item:Nn \l_tmpa_seq { 1 } }
+    }
+    {
+        #1
+    }
 }
-\def\@FEFUshortnamereversed#1{\@FEFUifempty{#1}{}{\expandafter\@FEFUshortnamereversedhelper#1\relax}}
+
+\NewDocumentCommand{\@FEFUshortnamereversed}{m}{%
+    \fefu_short_name_reversed_helper:n { #1 }
+}
+\ExplSyntaxOff
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\@FEFUacronym}
