Fix hyperref option clash

--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -81,6 +81,7 @@
 %    \begin{macrocode}
 \RequirePackage{fefu_base}
 \RequirePackage[a4paper,left=2.5cm,right=1cm,top=2cm,bottom=2cm]{geometry}
+\RequirePackage[hidelinks]{hyperref}
 \RequirePackage{setspace}
 \RequirePackage{multicol}
 \RequirePackage[explicit]{titlesec}
